--- a/job_nest_project/templates/header.html
+++ b/job_nest_project/templates/header.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,7 +10,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="">
-            <img src="static/logo/logo.png" alt="Job Nest Logo" style="width: 40px; height: 40px;">
+            <img src="{% static 'logo/logo.png'%}" alt="Job Nest Logo" style="width: 40px; height: 40px;">
             Job Nest
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
